# learn_cmake

./: README.md
episodes/episode1/: CMakeLists.txt  README.md
episodes/episode1/src/: main.c
episodes/episode2/: CMakeLists.txt  README.md  clean.zsh
episodes/episode2.1/impl/: CMakeLists.txt  run.zsh
episodes/episode2.1/lib/: CMakeLists.txt  README.md
episodes/episode2.1/lib/src/: adder.c
episodes/episode2/src/: main.c
tutorial/step1/: CMakeLists.txt  README.md  config.h.in  main.c
video/: CMakeLists.txt  README.md
video/include/: calc.h
video/lib/: calc.c
video/src/: main.c
